fix wrapping at certain screen sizes

--- a/src/main/webapp/css/buckyless/responsive.less
+++ b/src/main/webapp/css/buckyless/responsive.less
@@ -169,8 +169,8 @@
   .right-column {
     padding-left: 15px !important;
   }
-  .region-sidebar-left .sidebar-nav .sidebar .list-group-item a {
-    padding: 10px 15px;
+  .list-group-item a {
+    padding: 10px 15px !important;
   }
 }
 @media (max-width:500px) {
